# bibliogon

./: .dirsize-allowlist  .dirsize-baseline  .dockerignore  .env.example  .filesize-baseline  .filesize-whitelist  .gitattributes  .gitignore  .pre-commit-config.yaml  .security-ignore.yml  CHANGELOG-v0.14.0.md  CHANGELOG-v0.16.0.md  CHANGELOG-v0.19.1.md  CHANGELOG-v0.22.0.md  CHANGELOG-v0.22.1.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DONATE-de.md  DONATE.md  LICENSE  Makefile  README-de.md  README.md  SECURITY.md  cc-prompt-cover-flake-dexie-lazyload.md  docker-compose.prod.yml  docker-compose.yml  install.cmd  install.command  install.ps1  install.ps1.template  install.sh  install.sh.template  mkdocs.yml  package-lock.json  start.sh  stop.sh  uninstall.sh
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  backup_history.py  config_loader.py  config_overlay.py  credential_store.py  data_dir_migration.py  database.py  exception_handlers.py  exceptions.py  frontend_static.py  hookspecs.py  job_store.py  lan_auth.py  lan_net.py  licensing.py  logging_config.py  main.py  paths.py  router_registration.py  routes_admin.py  routes_misc.py  voice_store.py  yaml_io.py
backend/app/ai/: article_template_prompts.py  book_template_prompts.py  config.py  llm_client.py  llm_factory.py  pricing.py  prompts.py  providers.py  review_store.py  routes.py  seo_prompts.py  template_apply.py  template_body.py  template_factories.py  template_headers.py  template_models.py  template_schema.py  template_yaml.py
backend/app/data/: builtin_chapter_templates.py  builtin_templates.py
backend/app/import_plugins/: __init__.py  overrides.py  protocol.py  registry.py  scrivener_binder.py
backend/app/middleware/: body_size_limit.py
backend/app/models/: __init__.py
backend/app/repositories/: __init__.py  articles.py  authors.py  base.py  books.py  bulk.py  chapter_labels.py  chapter_templates.py  chapters.py  comments.py  pages.py  publications.py  templates.py
backend/app/routers/: ai_template_bulk.py  ai_template_bulk_fill.py  article_ai_fill.py  article_ai_template.py  article_assets.py  article_bulk_export.py  article_export.py  article_types.py  articles.py  assets.py  audiobook.py  authors.py  backup.py  book_ai_fill.py  book_ai_template.py  book_types.py  books.py  bulk_delete.py  chapter_labels.py  chapter_templates.py  chapters.py  comments.py  content_types.py  export.py  git_backup.py  git_import_backfill.py  git_sync.py  import_orchestrator.py  licenses.py  pages.py  plugin_install.py  publications.py  settings.py  ssh_keys.py  system.py  templates.py  translations.py  websocket.py  writing_stats.py
backend/app/schemas/: __init__.py
backend/app/services/: ai_bulk_fill_estimate.py  ai_bulk_fill_jobs.py  app_settings.py  covers.py  (+31 more)
backend/config/: app.yaml  app.yaml.example  article-types.yaml  backup_history.json  book-types.yaml  content-types.yaml  licenses.json  story-bible-entities.yaml
backend/migrations/: env.py
backend/tests/: conftest.py  test_admin_routes.py  test_ai_client.py  test_ai_config_refresh.py  test_ai_marketing.py  test_ai_providers.py  test_ai_review.py  test_ai_review_store.py  test_ai_template_bulk.py  test_ai_template_bulk_fill.py  test_ai_usage_tracking.py  test_alembic_drift.py  test_alembic_upgrade_chain.py  test_api.py  test_app_config_bootstrap.py  test_app_settings.py  test_archive_safety.py  test_article_ai_fill.py  test_article_ai_meta.py  test_article_ai_template.py  test_article_assets.py  test_article_comment_model.py  test_article_export.py  test_article_import_source.py  test_article_type_registry.py  test_article_types_endpoint.py  test_articles.py  test_articles_bulk_export.py  test_asset_rewrite.py  test_audiobook_endpoints.py  test_audiobook_export_async.py  test_audiobook_persisted_endpoints.py  test_audiobook_persistence.py  test_audiobook_skip_chapter_types.py  test_authors.py  test_backup_articles.py  test_backup_compare.py  test_backup_full_roundtrip.py  test_backup_history.py  test_backup_import_frontend_arrays.py  (+167 more)
launcher/: SPEC.md  TESTPLAN.md  bibliogon-launcher.spec  launcher.json  pyproject.toml  version_info.txt
launcher/bibliogon_launcher/: __init__.py  __main__.py  actions.py  cleanup.py  cli.py  config.py  docker.py  gui.py  health.py  i18n.py  installer.py  launcher_app.py  lockfile.py  manifest.py  settings.py  tray.py  ui.py  update_check.py
launcher/scripts/: cleanup-bibliogon.ps1  cleanup-bibliogon.sh  make_icns.py  make_icon.py
launcher/tests/: conftest.py  test_actions.py  test_cleanup.py  test_cleanup_retry.py  test_cli.py  test_config.py  test_docker.py  test_gui.py  test_health.py  test_i18n.py  test_i18n_and_welcome.py  test_i18n_parity.py  test_install_progress.py  test_installer.py  test_launcher.py  test_launcher_app.py  test_lockfile.py  test_main_imports.py  test_management.py  test_manifest.py  test_port.py  test_pre_install_check.py  test_settings.py  test_update_check.py
pluginforge/: pyproject.toml
pluginforge/pluginforge/: __init__.py  base.py  config.py  fastapi.py  hooks.py  licensing.py  loader.py  manager.py
pluginforge/tests/: test_base.py  test_config.py  test_hooks.py  test_licensing.py  test_loader.py  test_manager.py
plugins/bibliogon-plugin-audiobook/: pyproject.toml
plugins/bibliogon-plugin-comics/: Makefile  README.md  plugin.yaml  pyproject.toml
plugins/bibliogon-plugin-export/: pyproject.toml
plugins/bibliogon-plugin-getstarted/: pyproject.toml
plugins/bibliogon-plugin-git-sync/: README.md  pyproject.toml
plugins/bibliogon-plugin-grammar/: pyproject.toml
plugins/bibliogon-plugin-help/: pyproject.toml
plugins/bibliogon-plugin-kdp/: Makefile  README.md  plugin.yaml  pyproject.toml
plugins/bibliogon-plugin-kinderbuch/: Makefile  README.md  plugin.yaml  pyproject.toml
plugins/bibliogon-plugin-medium-import/: Makefile  README.md  plugin.yaml  pyproject.toml
plugins/bibliogon-plugin-ms-tools/: pyproject.toml
plugins/bibliogon-plugin-story-bible/: Makefile  README.md  pyproject.toml
plugins/bibliogon-plugin-translation/: pyproject.toml
(+2448 files in other folders)
