[tool.poetry]
name = "bibliogon-launcher"
version = "0.57.0"
description = "Windows Simple Launcher for Bibliogon. Starts the Docker stack, opens the browser, stops the stack on exit."
authors = ["Asterios Raptis"]
license = "MIT"
package-mode = true
packages = [{include = "bibliogon_launcher"}]

[tool.poetry.dependencies]
# PyInstaller 6.16+ supports Python 3.14 (and 3.11-3.13); pin the upper
# bound here so poetry's solver is satisfied. CI builds on 3.12 (see
# .github/workflows/launcher-*.yml); the wider range lets the venv use a
# 3.14 interpreter locally on distros that only ship tkinter for 3.14.
python = ">=3.11,<3.15"
# stdlib-only runtime: tkinter, urllib, webbrowser, subprocess, pathlib, json, logging
# Tkinter ships with Python on Windows installers; no pip dep required.
platformdirs = "^4.9.6"
docker-app-launcher = {version = "^0.4.0", extras = ["tray"]}

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pyinstaller = "^6.11.0"
pillow = "^12.2.0"  # Used only by the icon-generation script; bumped from 11.x for CVE-2026-{25990,40192,42308,42309,42310,42311}

[tool.poetry.scripts]
bibliogon-launcher = "bibliogon_launcher.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
