[tool.poetry]
name = "pluginforge"
version = "0.1.0"
description = "Application-independent plugin framework for Python, built on pluggy"
authors = ["astrapi69"]
license = "MIT"
readme = "README.md"
packages = [{include = "pluginforge"}]

[tool.poetry.dependencies]
python = "^3.11"
pluggy = "^1.5.0"
pyyaml = "^6.0"
fastapi = {version = "^0.115.0", optional = true}
alembic = {version = "^1.13.0", optional = true}

[tool.poetry.extras]
fastapi = ["fastapi"]
migrations = ["alembic"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
