[tool.poetry]
name = "bibliogon-plugin-audiobook"
version = "1.0.0"
description = "Audiobook generation plugin for Bibliogon: TTS-based chapter-by-chapter audio."
authors = ["Asterios Raptis"]
license = "MIT"
package-mode = true
packages = [{include = "bibliogon_audiobook"}]

[tool.poetry.dependencies]
python = "^3.11"
pluginforge = "^0.5.0"
fastapi = "^0.115.0"
# manuscripta ^0.8.0 ships a full TTS adapter layer with factory, exception
# hierarchy, retry logic (tenacity) and lazy-imported optional engines.
# Engine-specific packages (edge-tts, pyttsx3, elevenlabs,
# google-cloud-texttospeech) are managed by manuscripta itself via lazy
# imports that raise TTSEngineNotInstalledError when missing.  Bibliogon
# no longer pins them directly - only edge-tts is a hard transitive dep
# of manuscripta; the rest are genuinely optional.
manuscripta = "^0.8.0"
cryptography = "^46.0.7"
# MP3 header parser for per-chapter duration readout. Pure Python, no
# ffmpeg/ffprobe dependency. Used by audiobook_storage.flush_chapter to
# record duration in metadata.json so the book-metadata UI can show
# "5:23" per chapter.
mutagen = "^1.47.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"

[tool.poetry.plugins."bibliogon.plugins"]
audiobook = "bibliogon_audiobook.plugin:AudiobookPlugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
