[tool.poetry]
name = "bibliogon-plugin-comics"
version = "0.55.0"
description = "Comics plugin for Bibliogon - panel-based pages, multi-bubble, comic-specific layouts (Phase 1: scaffolding)"
authors = ["astrapi69"]
license = "MIT"
readme = "README.md"
packages = [{include = "bibliogon_comics"}]

[tool.poetry.dependencies]
python = "^3.11"
pluginforge = "^0.10.0"
fastapi = "^0.136.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-cov = "^7.1.0"
httpx = "^0.28.0"

[tool.poetry.plugins."bibliogon.plugins"]
comics = "bibliogon_comics.plugin:ComicsPlugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
