[tool.poetry]
name = "bibliogon-plugin-export"
version = "0.45.0"
description = "EPUB, PDF and project structure export plugin for Bibliogon"
authors = ["astrapi69"]
license = "MIT"
readme = "README.md"
packages = [{include = "bibliogon_export"}]

[tool.poetry.dependencies]
python = "^3.11"
pluginforge = "^0.10.0"
manuscripta = "^0.9.0"
fastapi = "^0.136.0"
pyyaml = "^6.0"
# PB-PHASE4 Session 6: picture-book PDF rendering. WeasyPrint takes
# HTML+CSS in and produces print-ready PDF. CSS Grid + paged-media
# native (matches Session 4c's PageCanvas layout primitives so
# rendering ports cleanly). BSD-3-clause license — MIT-compatible.
# Runtime deps include Pango (text shaping) on Linux; standard in
# most Python Docker images. The chapter-based pipeline keeps using
# manuscripta + Pandoc; the dispatcher in routes.py routes picture-
# books to this new generator.
weasyprint = "^66.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
mutmut = "^3.5.0"
pytest-cov = "^7.1.0"

[tool.poetry.plugins."bibliogon.plugins"]
export = "bibliogon_export.plugin:ExportPlugin"

[tool.mutmut]
paths_to_mutate = ["bibliogon_export/"]
tests_dir = ["tests/"]
do_not_mutate = ["bibliogon_export/plugin.py", "bibliogon_export/routes.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
