[tool.poetry]
name = "bibliogon-plugin-getstarted"
version = "0.35.1"
description = "Onboarding and getting started guide for Bibliogon"
authors = ["astrapi69"]
license = "MIT"
readme = "README.md"
packages = [{include = "bibliogon_getstarted"}]

[tool.poetry.dependencies]
python = "^3.11"
pluginforge = "^0.5.0"
fastapi = "^0.136.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-cov = "^7.1.0"

[tool.poetry.plugins."bibliogon.plugins"]
getstarted = "bibliogon_getstarted.plugin:GetStartedPlugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
