[tool.poetry]
name = "bibliogon-plugin-grammar"
version = "1.0.0"
description = "Grammar check plugin for Bibliogon via LanguageTool"
authors = ["astrapi69"]
license = "MIT"
readme = "README.md"
packages = [{include = "bibliogon_grammar"}]

[tool.poetry.dependencies]
python = "^3.11"
pluginforge = "^0.5.0"
fastapi = "^0.135.0"
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-cov = "^7.1.0"

[tool.poetry.plugins."bibliogon.plugins"]
grammar = "bibliogon_grammar.plugin:GrammarPlugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
