[tool.poetry]
name = "bibliogon-plugin-help"
version = "1.0.0"
description = "In-app help, keyboard shortcuts, and FAQ for Bibliogon"
authors = ["astrapi69"]
license = "MIT"
readme = "README.md"
packages = [{include = "bibliogon_help"}]

[tool.poetry.dependencies]
python = "^3.11"
pluginforge = {path = "../../pluginforge", develop = true}
fastapi = "^0.115.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[tool.poetry.plugins."bibliogon.plugins"]
help = "bibliogon_help.plugin:HelpPlugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
