[tool.poetry]
name = "bibliogon-plugin-kdp"
version = "1.0.0"
description = "Amazon KDP plugin for Bibliogon - metadata export, cover validation, preview"
authors = ["astrapi69"]
license = "MIT"
readme = "README.md"
packages = [{include = "bibliogon_kdp"}]

[tool.poetry.dependencies]
python = "^3.11"
pluginforge = "^0.5.0"
fastapi = "^0.135.0"
pyyaml = "^6.0"
pillow = "^11.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"

[tool.poetry.plugins."bibliogon.plugins"]
kdp = "bibliogon_kdp.plugin:KdpPlugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
