[tool.poetry]
name = "bibliogon-plugin-translation"
version = "1.0.0"
description = "Translation plugin for Bibliogon: DeepL and local LLM (LMStudio) integration."
authors = ["Asterios Raptis"]
license = "MIT"
package-mode = true
packages = [{include = "bibliogon_translation"}]

[tool.poetry.dependencies]
python = "^3.11"
pluginforge = "^0.5.0"
fastapi = "^0.135.0"
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.3.0"

[tool.poetry.plugins."bibliogon.plugins"]
translation = "bibliogon_translation.plugin:TranslationPlugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
